# tgbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  config.py  crud.py  database.py  logging_config.py  main.py  models.py  scheduler.py  schemas.py  serializers.py
app/bot/: __init__.py  handlers.py  keyboards.py  main.py
app/localization/: translator.py
app/services/: auth.py
app/utils/: backup.py
bot/: handlers.py  views.py
docs/: architecture.md  plan.md
exercise_tracker/: __init__.py  cli.py  models.py  progress.py  storage.py
monitoring/: prometheus.yml
scripts/: backup_database.sh
src/tgbot/: handlers.py  miniapp.py  session.py
src/tgnotes/: __init__.py  db.py  models.py  repositories.py
src/tgnotes/services/: __init__.py  exercise_generator.py  exercise_service.py  ocr_importer.py  pdf_importer.py  pipeline.py  text_importer.py  web_importer.py
tests/: __init__.py  conftest.py  test_api.py  test_auth_service.py  test_bot.py  test_checker.py  test_exercise_generator.py  test_generators.py  test_integration.py  test_localization.py  test_move_words.py  test_notifications_integration.py  test_ocr_importer.py  test_pdf_importer.py  test_pipeline.py  test_recall_words.py  test_scheduler.py  test_session.py  test_tracker.py  test_ui_and_scheduler.py  test_ui_scenarios.py  test_web_importer.py
tgbot/: __init__.py  models.py  notifications.py  repository.py  scheduler.py  telegram.py  ui.py
tgbot/exercises/: __init__.py  checker.py  generators.py  models.py  storage.py
