[project]
name = "tgbot"
version = "0.1.0"
description = "Infrastructure scaffold for Telegram learning bot"
authors = [{ name = "Dev Team" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus-fastapi-instrumentator",
]
dev = [
    "black",
    "isort",
    "pytest",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
