[project]
name = "tgbot"
version = "0.1.0"
description = "Infrastructure scaffold for Telegram learning bot"
authors = [{ name = "Dev Team" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus-fastapi-instrumentator",
]
dev = [
    "black",
    "isort",
    "pytest",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
extras = [
    "pdfplumber>=0.10",
    "pytesseract>=0.3.10",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "langdetect>=1.0.9",
]

test = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests"
]
